--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- Farcaster Frame Meta Tags -->
+    <meta property="fc:frame" content="vNext" />
+    <meta
+      property="fc:frame:image"
+      content="https://i.ibb.co/kMKzQsV/Black-and-White-Simple-Elegant-Creative-Design-Portfolio-Presentation.png"
+    />
+    <meta property="fc:frame:image:aspect_ratio" content="1.91:1" />
+    <title>GlyphCast</title>
   </head>
   <body>
     <div id="root"></div>
